hphp/test/zend/good/Zend/tests/bug43344_9.php.expectf

Fatal error: Undefined constant 'Foo\bar' in %s/bug43344_9.php on line 3
